# rust-thesis-blatta-ids

./: Cargo.toml
src/: main.rs
src/model/randomforest/: model.rs
src/model/rnn/: model.rs
src/service/: service.rs
